Fix random horizontal scrollbar bug

--- a/templates/taskmeister/css/template.scss
+++ b/templates/taskmeister/css/template.scss
@@ -11,6 +11,7 @@ body {//Body Tag
     width: 90%;
     word-wrap: break-word;
     overflow-wrap: break-word;
+    overflow-x: hidden;
 }
 
 /*Custom Tags*/
